# programacao-paralela

./: .gitignore  .travis.yml  .vimprj  CMakeLists.txt  README.md
cmake/Modules/: FindC99.cmake  UseLATEX.cmake
common/: CMakeLists.txt  common.c  common.h  profiler.c  profiler.h
go-histogram/: CMakeLists.txt  main.go
greeting/: CMakeLists.txt  main.c
hadoop-image-condition/: CMakeLists.txt  ImageCondition.java  WordCount.java
hadoop-image-condition/doc/: CMakeLists.txt  main.tex
hadoop-image-condition/doc/images/: cubo-de-dados.eps  solo.eps
histogram/: CMakeLists.txt  main.c
monte-carlo-pi/: CMakeLists.txt  main.c
mpi-histogram/: CMakeLists.txt  main.c
mpi-sumtree/: CMakeLists.txt
omp-count-sort/: CMakeLists.txt  README.md  benchmark  main.c
omp-histogram/: CMakeLists.txt  main.c
omp-monte-carlo-pi/: CMakeLists.txt  main.c
pth-histogram/: CMakeLists.txt  main.c
pth-monte-carlo-pi/: CMakeLists.txt  main.c
pth-trapezoidal/: CMakeLists.txt  main.c
sumtree/: CMakeLists.txt  README  main.c
