cmake_minimum_required(VERSION 2.8)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

add_subdirectory(common)
add_subdirectory(greeting)
add_subdirectory(histogram)
add_subdirectory(sumtree)
add_subdirectory(monte-carlo-pi)
add_subdirectory(omp-histogram)
add_subdirectory(omp-monte-carlo-pi)
add_subdirectory(omp-count-sort)
