cmake_minimum_required(VERSION 2.8)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_EXPORT_COMPILE_COMMANDS True)

enable_testing()

add_subdirectory(common)
add_subdirectory(mpi-greeting)
add_subdirectory(mpi-histogram)
add_subdirectory(mpi-sumtree)
add_subdirectory(mpi-monte-carlo-pi)
add_subdirectory(omp-histogram)
add_subdirectory(omp-monte-carlo-pi)
add_subdirectory(omp-count-sort)
add_subdirectory(pth-histogram)
